# samples

./: .gitignore  .gitignore~  README.rb
GoogleAppsEngine/: .gitignore  runit.sh
GoogleAppsEngine/13_steps/: README.md  app.yaml  main.py
GoogleAppsEngine/13_steps/13_steps/: settings.py  urls.py
GoogleAppsEngine/13_steps/in13_steps/: settings.py  urls.py
GoogleAppsEngine/django_13_steps/: README.md  app.yaml  main.py
GoogleAppsEngine/django_13_steps/13_steps/: settings.py  urls.py
GoogleAppsEngine/djnomo/: settings.py  urls.py
GoogleAppsEngine/djnomo/books/: forms.py  models.py  views.py
GoogleAppsEngine/djnorel/: README.md  app.yaml  index.yaml  settings.py  urls.py
GoogleAppsEngine/djnorel/books/: admin.py  models.py  views.py
GoogleAppsEngine/djnorel/core/: models.py  views.py
GoogleAppsEngine/djnorel/my_indexes/: dbindexes.py
GoogleAppsEngine/helloworld/: helloworld.py
R/: .gitignore
Ruby_samples/rails_3_tutorial/: .gitignore
Ruby_samples/rails_3_tutorial/demo_app/: Gemfile
Ruby_samples/rails_3_tutorial/first_app/: Gemfile
Ruby_samples/rails_3_tutorial/sample_app/: Gemfile  Gemfile~
android/: .gitignore  .gitignore~
android/android-rss-read-only/: .classpath
android/android-rss-read-only/.svn/: entries
android/sample1/workspace/: .gitignore  .gitignore~
angular/angular14/tutorial/: angular.json  package-lock.json
bootstrap/: .gitignore
bootstrap/firstones/: helloworld.html
java/clean_code/args/: pom.xml
java/varv/: README.md  build.gradle
nodejs/mytodo/: README.md  package.json
python/data_visualization/: Rosana_graph.py  Rosana_graph2.py  combine_and_plot.py  my_proposal.py  parser_guai.py  plot.py  plot2.py  print.py  requirements.txt  sanity.py  simple.csv  simple.py
python/fast_api/events/: .gitignore  README.md  alembic.ini  config.yaml  logging.conf  pyproject.toml
python/fast_api/events/fairs_bg/: __main__.py  app.py
python/fast_api/events/fairs_bg/business/errors/: error_code.py  fairs_error.py
python/fast_api/events/fairs_bg/business/events/: model.py  service.py
python/fast_api/events/fairs_bg/business/ports/: persistance.py
python/fast_api/events/fairs_bg/business/user/: model.py  service.py
python/fast_api/events/fairs_bg/logs/: setup.py
python/fast_api/events/fairs_bg/ports/config/: settings.py
python/fast_api/events/fairs_bg/ports/db/: sqlalchemy.py
python/fast_api/events/fairs_bg/ports/db/dao/: events.py  users.py
python/fast_api/events/fairs_bg/ports/db/migrations/: env.py
python/fast_api/events/fairs_bg/ports/db/migrations/versions/: ba7657077761_adding_default_user.py  c6d0c9a0321e_01_create_user_table.py  d910ee8d8da3_adding_uniqueness_in_the_user_email.py  e0a0418ccebe_04_adding_events.py
python/fast_api/events/fairs_bg/ports/routes/: __init__.py  errors.py  users.py
python/fast_api/events/fairs_bg/ports/routes/events/: routers.py  service.py
python/fast_api/events/fairs_bg/ports/routes/services/: users.py
python/fast_api/events/fairs_bg/ports/routes/users/: routes.py  service.py
python/fast_api/events/fairs_bg/ports/security/: basic.py
python/fast_api/events/scripts/: README.md
python/fast_api/events/scripts/charts/: Chart.yaml  values.yaml
python/fast_api/events/scripts/charts/templates/: fairs-bg-config.yaml  fairs-bg-deployment.yaml  fairs-bg-service.yaml
python/fast_api/events/scripts/docker/: Dockerfile  compose.yaml  run.sh
python/fast_api/events/scripts/requirements/: requirements-dev.txt  requirements-test.txt
python/fast_api/events/tests/: README.md  commons.py  conftest.py
python/fast_api/events/tests/integration/: conftest.py
python/fast_api/events/tests/integration/ports/db/dao/: test_events.py
python/fast_api/events/tests/integration/ports/routes/: test_event.py  test_users.py
python/fast_api/events/tests/integration/ports/security/: test_basic.py
python/fast_api/events/tests/loading/: locustfile.py
python/fast_api/events/tests/unit/business/: conftest.py  test_service.py
python/fast_api/events/tests/unit/business/errors/: test_error_code.py
python/fast_api/events/tests/unit/business/events/: test_models.py  test_service.py
python/fast_api/events/tests/unit/business/user/__pycache__/: test_service.py
python/fast_api/events/tests/unit/ports/db/: test_sqlalchemy.py
python/fast_api/events/tests/unit/ports/routes/: test_errors.py
python/fast_api/oauth/commons/: commons.py  pyproject.toml
python/fast_api/oauth/commons/commons/: api.py  security.py
python/fast_api/oauth/resourceapp/: pyproject.toml
python/fast_api/oauth/resourceapp/resourceapp/: __main__.py  app.py
python/fast_api/oauth/webapp/: pyproject.toml
python/fast_api/oauth/webapp/webapp/: __main__.py  app.py  security.py
python/fast_api/oauth_mock_server/app/: main.py  pyproject.toml
python/helloWorld/hello3/: .gitignore  pyproject.toml  setup.cfg
rust/concepts/tokio_http/: Cargo.toml
rust/concepts/tokio_http/src/: main.rs
rust/persistance/diesel_hello/: .env  Cargo.toml  README.md
rust/persistance/diesel_hello/migrations/2021-03-06-151204_companies/: down.sql  up.sql
rust/persistance/diesel_hello/scripts/: create_postgres_user.sh  start_postgres.sh
rust/persistance/diesel_hello/src/: lib.rs  models.rs  schema.rs
rust/word_counter/: .gitignore  Cargo.toml  README.md
rust/word_counter/migrations/2021-04-01-220136_create_books/: up.sql
rust/word_counter/migrations/2021-04-24-045556_create_words/: down.sql  up.sql
rust/word_counter/migrations/2021-05-19-195148_unique_constraint_word/: down.sql  up.sql
rust/word_counter/resources/test/: big_catalog.xml  moby_dick.extracted.txt  moby_dick.txt  moby_dick.xml  moby_dick_little.txt  simple.xml  simple_rdf.xml
rust/word_counter/scripts/: download_catalog.sh  install_database.sh
rust/word_counter/src/: book.rs  concurrency.rs  config.rs  counter.rs  lib.rs  main.rs
rust/word_counter/src/gutenberg/: catalog.rs  error.rs  fetcher.rs  mod.rs  parser.rs  reader.rs
rust/word_counter/src/persistance/: dao.rs  error.rs  mod.rs  models.rs
scala/apachelog/: build.sbt  runSBTProxy.bat
(+960 files in other folders)
