[package]
name = "word_counter"
version = "0.1.0"
authors = ["frauca <roger.frauca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
minidom = "0.13.0"
log = "^0.4.5"
simple_logger = "1.11.0"