[package]
name = "word_counter"
version = "0.1.0"
authors = ["frauca <roger.frauca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
minidom = "0.13.0"
log = "^0.4.5"
simple_logger = "1.11.0"
strum = "0.20.0"
strum_macros = "0.20.1"
isolang = "1.0.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_plain = "0.3.0"
tokio = { version = "1.4.0", features = ["full"] }