[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fairs_bg"
authors = [
    {name = "Roger Frauca", email = "roger.frauca@gmail.com"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi[all] == 0.100.1",
    "uvicorn == 0.23.2",
    "alembic == 1.11.3",
    "psycopg2-binary == 2.9.7"
]
dynamic = ["version"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
fairs-bg = "fairs_bg.__main__:main"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
disallow_untyped_defs = true
implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true