[metadata]
name = hello3
version = attr: hello.__version__.__version__

[options]
packages=find:
include_package_data = True
install_requires =
	click>=8.1.3
    request

[options.entry_points]
console_scripts = hello=hello.main:hello

[options.packages.find]
exclude =
	tests*

[options.extras_require]
test =
	pre-commit
	pytest

[coverage:run]
relative_files = True
source = hello
branch = True
