[package]
name = "tokio_http"
version = "0.1.0"
authors = ["frauca <roger.frauca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
futures = "0.3.13"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.2"