[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "commons"
authors = [{ name = "Roger Frauca", email = "roger.frauca@gmail.com" }]
description = "Testing webapp"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]
dependencies = ["httpx == 0.25.0"]
dynamic = ["version"]


[tool.mypy]
python_version = "3.11"
show_error_codes = true
disallow_untyped_defs = true
implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
