[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "resourceapp"
authors = [{ name = "Roger Frauca", email = "roger.frauca@gmail.com" }]
description = "Testing resource app"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]
dependencies = ["fastapi[all] == 0.103.1", "uvicorn == 0.23.2"]
dynamic = ["version"]

[project.scripts]
resource = "resource.__main__:main"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
disallow_untyped_defs = true
implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
