[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "webapp"
authors = [{ name = "Roger Frauca", email = "roger.frauca@gmail.com" }]
description = "Testing webapp"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
classifiers = ["Framework :: Django", "Programming Language :: Python :: 3"]
dependencies = [
    "fastapi[all] == 0.103.1",
    "uvicorn == 0.23.2",
    "okta-jwt-verifier == 0.2.4",
]
dynamic = ["version"]

[project.scripts]
webapp = "webapp.__main__:main"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
disallow_untyped_defs = true
implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
